# google-cloud-cpp

./: .bazelrc  .typos.toml  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE.bazel  bad.txt  eye_test.sh  good.txt  libraries.bzl  repro.txt  setup.sh
google/cloud/gsuiteaddons/: BUILD.bazel  CMakeLists.txt  README.md  config.cmake.in
google/cloud/gsuiteaddons/doc/: environment-variables.dox  main.dox  options.dox  override-authentication.dox  override-endpoint.dox  override-retry-policies.dox
google/cloud/gsuiteaddons/quickstart/: BUILD.bazel  CMakeLists.txt  Makefile  README.md  WORKSPACE.bazel  quickstart.cc
google/cloud/gsuiteaddons/v1/: .repo-metadata.json  g_suite_add_ons_client.cc  g_suite_add_ons_client.h  g_suite_add_ons_connection.cc  g_suite_add_ons_connection.h  g_suite_add_ons_connection_idempotency_policy.cc  g_suite_add_ons_connection_idempotency_policy.h  g_suite_add_ons_options.h
google/cloud/gsuiteaddons/v1/internal/: g_suite_add_ons_auth_decorator.cc  g_suite_add_ons_auth_decorator.h  g_suite_add_ons_connection_impl.cc  g_suite_add_ons_connection_impl.h  g_suite_add_ons_logging_decorator.cc  g_suite_add_ons_logging_decorator.h  g_suite_add_ons_metadata_decorator.cc  g_suite_add_ons_metadata_decorator.h  g_suite_add_ons_option_defaults.cc  g_suite_add_ons_option_defaults.h  g_suite_add_ons_retry_traits.h  g_suite_add_ons_stub.cc  g_suite_add_ons_stub.h  g_suite_add_ons_stub_factory.cc  g_suite_add_ons_stub_factory.h  g_suite_add_ons_tracing_connection.cc  g_suite_add_ons_tracing_connection.h  g_suite_add_ons_tracing_stub.cc  g_suite_add_ons_tracing_stub.h
google/cloud/gsuiteaddons/v1/mocks/: mock_g_suite_add_ons_connection.h
google/cloud/gsuiteaddons/v1/samples/: g_suite_add_ons_client_samples.cc
google/cloud/opentelemetry/darren/: BUILD.bazel  resource_detector.cc  resource_detector.h  resource_detector_options.h  resource_detector_test.cc
google/cloud/opentelemetry/darren/internal/: resource_detector_impl.cc  resource_detector_impl.h
google/cloud/opentelemetry/quickstart/: BUILD.bazel  CMakeLists.txt  foo_library.h  grpc_metrics.cc  metrics.cc  quickstart.cc
google/cloud/paymentgateway/: BUILD.bazel  CMakeLists.txt  README.md  config.cmake.in
google/cloud/paymentgateway/doc/: main.dox  options.dox
google/cloud/paymentgateway/issuerswitch/v1/: issuer_switch_resolutions_client.cc  issuer_switch_resolutions_client.h  issuer_switch_resolutions_connection.cc  issuer_switch_resolutions_connection.h  issuer_switch_resolutions_connection_idempotency_policy.cc  issuer_switch_resolutions_connection_idempotency_policy.h  issuer_switch_resolutions_options.h  issuer_switch_rules_client.cc  issuer_switch_rules_client.h  issuer_switch_rules_connection.cc  issuer_switch_rules_connection.h  issuer_switch_rules_connection_idempotency_policy.cc  issuer_switch_rules_connection_idempotency_policy.h  issuer_switch_rules_options.h  issuer_switch_transactions_client.cc  issuer_switch_transactions_client.h  issuer_switch_transactions_connection.cc  issuer_switch_transactions_connection.h  issuer_switch_transactions_connection_idempotency_policy.cc  issuer_switch_transactions_connection_idempotency_policy.h  issuer_switch_transactions_options.h
google/cloud/paymentgateway/issuerswitch/v1/internal/: issuer_switch_resolutions_auth_decorator.cc  issuer_switch_resolutions_auth_decorator.h  issuer_switch_resolutions_connection_impl.cc  issuer_switch_resolutions_connection_impl.h  issuer_switch_resolutions_logging_decorator.cc  issuer_switch_resolutions_logging_decorator.h  issuer_switch_resolutions_metadata_decorator.cc  issuer_switch_resolutions_metadata_decorator.h  issuer_switch_resolutions_option_defaults.cc  issuer_switch_resolutions_option_defaults.h  issuer_switch_resolutions_retry_traits.h  issuer_switch_resolutions_stub.cc  issuer_switch_resolutions_stub.h  issuer_switch_resolutions_stub_factory.cc  issuer_switch_resolutions_stub_factory.h  issuer_switch_rules_auth_decorator.cc  issuer_switch_rules_auth_decorator.h  issuer_switch_rules_connection_impl.cc  issuer_switch_rules_connection_impl.h  issuer_switch_rules_logging_decorator.cc  issuer_switch_rules_logging_decorator.h  issuer_switch_rules_metadata_decorator.cc  issuer_switch_rules_metadata_decorator.h  issuer_switch_rules_option_defaults.cc  issuer_switch_rules_option_defaults.h  issuer_switch_rules_retry_traits.h  issuer_switch_rules_stub.cc  issuer_switch_rules_stub.h  issuer_switch_rules_stub_factory.cc  issuer_switch_rules_stub_factory.h  issuer_switch_transactions_auth_decorator.cc  issuer_switch_transactions_auth_decorator.h  issuer_switch_transactions_connection_impl.cc  issuer_switch_transactions_connection_impl.h  issuer_switch_transactions_logging_decorator.cc  issuer_switch_transactions_logging_decorator.h  issuer_switch_transactions_metadata_decorator.cc  issuer_switch_transactions_metadata_decorator.h  issuer_switch_transactions_option_defaults.cc  issuer_switch_transactions_option_defaults.h  (+5 more)
google/cloud/paymentgateway/issuerswitch/v1/mocks/: mock_issuer_switch_resolutions_connection.h  mock_issuer_switch_rules_connection.h  mock_issuer_switch_transactions_connection.h
google/cloud/paymentgateway/issuerswitch/v1/samples/: issuer_switch_resolutions_client_samples.cc  (+2 more)
google/cloud/paymentgateway/quickstart/: BUILD.bazel  CMakeLists.txt  Makefile  README.md  WORKSPACE.bazel  quickstart.cc
google/cloud/pubsub/quickstart/: BUILD.bazel  CMakeLists.txt  alex.cc  clean.cc  exactly.cc  expire.cc  modack.cc  nack.cc  nothing.cc  quickstart.cc  subscriber_ack.cc  subscriber_concurrency_quickstart.cc  subscriber_fc_quickstart.cc  subscriber_ordering_quickstart.cc  subscriber_pull_quickstart.cc  subscriber_quickstart_timer.cc  test.proto
google/cloud/talent/quickstart/: BUILD.bazel  WORKSPACE.bazel  gcp_exporter.cc  gcp_exporter.h  gcp_exporter_test.cc  quickstart.cc  recordable.cc  recordable.h  recordable_test.cc
google/cloud/trace/exporter/: BUILD.bazel  CMakeLists.txt  gcp_exporter.cc  gcp_exporter.h  gcp_exporter_test.cc  recordable.cc  recordable.h  recordable_test.cc
(+2509 files in other folders)
