# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

licenses(["notice"])  # Apache 2.0

cc_binary(
    name = "metrics",
    srcs = [
        "foo_library.h",
        "metrics.cc",
    ],
    deps = [
        "@io_opentelemetry_cpp//api",
        "@io_opentelemetry_cpp//examples/common/metrics_foo_library:common_metrics_foo_library",
        "@io_opentelemetry_cpp//exporters/ostream:ostream_metric_exporter",
        "@io_opentelemetry_cpp//sdk/src/metrics",
        "@google_cloud_cpp//:opentelemetry",
    ],
)

cc_binary(
    name = "grpc_metrics",
    srcs = [
        "grpc_metrics.cc",
    ],
    deps = [
        "@io_opentelemetry_cpp//api",
        "@io_opentelemetry_cpp//exporters/ostream:ostream_metric_exporter",
        "@io_opentelemetry_cpp//sdk/src/metrics",
        "@google_cloud_cpp//:bigtable",
        "@google_cloud_cpp//:opentelemetry",
        "@com_github_grpc_grpc//:grpcpp_otel_plugin",
    ],
)

cc_binary(
    name = "quickstart",
    srcs = [
        "quickstart.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:storage",
    ],
)
