# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

licenses(["notice"])  # Apache 2.0

cc_binary(
    name = "subscriber_quickstart_timer",
    srcs = [
        "subscriber_quickstart_timer.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)

cc_binary(
    name = "subscriber_quickstart",
    srcs = [
        "subscriber_quickstart.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)


cc_binary(
    name = "subscriber_fc_quickstart",
    srcs = [
        "subscriber_fc_quickstart.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)


cc_binary(
    name = "subscriber_ordering_quickstart",
    srcs = [
        "subscriber_ordering_quickstart.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)


cc_binary(
    name = "subscriber_concurrency_quickstart",
    srcs = [
        "subscriber_concurrency_quickstart.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)
cc_binary(
    name = "subscriber_pull_quickstart",
    srcs = [
        "subscriber_pull_quickstart.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)

cc_binary(
    name = "quickstart",
    srcs = [
        "quickstart.cc",
    ],
    deps = [
        "//:common",
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)

cc_binary(
    name = "clean",
    srcs = [
        "clean.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)

cc_binary(
    name = "subscriber_ack",
    srcs = [
        "subscriber_ack.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)


cc_binary(
    name = "nack",
    srcs = [
        "nack.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)

cc_binary(
    name = "expire",
    srcs = [
        "expire.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)


cc_binary(
    name = "nothing",
    srcs = [
        "nothing.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)
cc_binary(
    name = "exactly",
    srcs = [
        "exactly.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)

cc_binary(
    name = "alex",
    srcs = [
        "alex.cc",
    ],
    deps = [
        "@google_cloud_cpp//:opentelemetry",
        "@google_cloud_cpp//:pubsub",
    ],
)