# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "recordable",
    srcs = ["recordable.cc"],
    hdrs = ["recordable.h"],
    defines = ["HAVE_ABSEIL"],
    deps = [
        "//:trace",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_googleapis//google/devtools/cloudtrace/v2:cloudtrace_cc_proto",
        "@io_opentelemetry_cpp//api",
        "@io_opentelemetry_cpp//sdk/src/trace",
    ],
)

cc_library(
    name = "gcp_exporter",
    srcs = ["gcp_exporter.cc"],
    hdrs = ["gcp_exporter.h"],
    defines = ["HAVE_ABSEIL"],
    deps = [
        ":recordable",
        "@io_opentelemetry_cpp//sdk/src/trace",
    ],
)

cc_test(
    name = "gcp_exporter_test",
    srcs = ["gcp_exporter_test.cc"],
    defines = ["HAVE_ABSEIL"],
    deps = [
        ":gcp_exporter",
        "//:trace_mocks",
        "@com_google_googletest//:gtest_main",
        "@io_opentelemetry_cpp//api",
        "@io_opentelemetry_cpp//sdk/src/trace",
    ],
)

cc_test(
    name = "recordable_test",
    srcs = ["recordable_test.cc"],
    defines = ["HAVE_ABSEIL"],
    deps = [
        ":recordable",
        "@com_google_googletest//:gtest_main",
        "@io_opentelemetry_cpp//api",
        "@io_opentelemetry_cpp//sdk/src/trace",
    ],
)
